--- a/src/components/pin/pin.component.css
+++ b/src/components/pin/pin.component.css
@@ -1,18 +1,26 @@
+.pin{
+    position: absolute;
+    top: 15%;
+    left: 35%;
+    background: #ffffff;
+    border-radius: 5px;
+    padding: 1em;
+}
 .pin-top{
     text-align: center;
 }
 .pin-form{
-    margin-left: 40%;
+    margin-left: 5%;
 }
 .pin-form input{
-    height: 6vh;
-    width: 3vw;
-    margin-right: 2%;
+    height: 7vh;
+    width: 4vw;
+    margin-left: 5%;
     border-radius: 10px;
 }
 .done{
     height: 5vh;
-    width: 30vw;
+    width: 25vw;
     border: none;
     color: #ffffff;
     background: #1f28eb;
