--- a/src/components/signup/signup.component.css
+++ b/src/components/signup/signup.component.css
@@ -4,8 +4,10 @@
 .signup-page{
     background: #ffffff;
     width: 30%;
-    margin: 5% 0 0 35%;
+    margin-left: 35%;
     padding: 2em;
+    position: absolute;
+    top: 3%;
 }
 .signup-form{
     display: flex;
