--- a/src/components/sidebar/sidebar.component.css
+++ b/src/components/sidebar/sidebar.component.css
@@ -20,3 +20,9 @@
     flex-direction: column;
     margin-top: 60%;
 }
+
+@media screen and (max-width: 768px) {
+    .sidebar{
+        display: none;
+    }
+}
