--- a/src/components/send/send.component.css
+++ b/src/components/send/send.component.css
@@ -1,4 +1,12 @@
 .box{
-    margin-left: 20%;
-    margin-top: -40%;
+    margin: -40% 0 0 20%;
+    background: #f5f5f5;
+    padding: 1em;
+}
+
+@media screen and (max-width: 768px) {
+    .box{
+        margin-top: 0;
+        margin-left: 15%;
+    }
 }
