--- a/src/components/statistics/statistics.component.css
+++ b/src/components/statistics/statistics.component.css
@@ -6,3 +6,8 @@
     width: 80vw !important;
     background: '#ffffff' !important;
 }
+@media screen and (max-width: 768px) {
+    .canvas{
+        height: 90vh !important;
+    }
+}
