--- a/src/components/transactions/transactions.component.css
+++ b/src/components/transactions/transactions.component.css
@@ -18,3 +18,11 @@ table{
 td{
     padding: 1em;
 }
+
+@media screen and (max-width: 768px) {
+    .transactions{
+        margin-top: 0;
+        margin-left: 2%;
+        width: 90%;
+    }
+}
