--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -8,3 +8,10 @@
 .dashboard{
     background: #f5f5f5;
 }
+
+@media screen and (max-width: 768px) {
+    .dashboard-right{
+        margin-top: 0;
+        margin-left: 0;
+    }
+}
